Added Firebase (connection) + create Realtime Database. Added bottom navigation (do not work because - AndroidX "need fix"). News module disabled

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Ростсельмаш</string>
+    <string name="explore_title">Главная</string>
+    <string name="dashboard_title">Показания</string>
+    <string name="profile_title">Аккаунт</string>
+
 </resources>
