Fixed bottom navigation. News module disabled

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="explore_title">Главная</string>
     <string name="dashboard_title">Показания</string>
     <string name="profile_title">Аккаунт</string>
+    <string name="notifications_title">Уведомления</string>
 
 </resources>
