--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,23 +5,23 @@
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
+    <string name="prompt_password">Пароль</string>
+    <string name="action_sign_in">Войдите или зарегистрируйтесь</string>
+    <string name="action_sign_in_short">Войти</string>
+    <string name="error_invalid_email">Этот адрес не корректен</string>
+    <string name="error_invalid_password">Этот пароль слишком короткий</string>
+    <string name="error_incorrect_password">Этот пароль не корректен</string>
+    <string name="error_field_required">Это поле обязательно к заполнению</string>
+    <string name="permission_rationale">"Для предоставления электронной почты необходимы разрешения"
     </string>
     // Save_State
-    <string name="title_activity_auth">Login or Sign up</string>
+    <string name="title_activity_auth">Войдите или зарегистрируйтесь</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     // FingerPrint
-    <string name="login_biometric">Login with Biometric</string>
-    <string name="biometric_desc">use biometric for faster and \neasy access to your account</string>
-    <string name="btn_use_biometric">Use Biometric</string>
+    <string name="login_biometric">Биометрическая авторизация</string>
+    <string name="biometric_desc">Используйте отпечаток пальца для быстрого входа</string>
+    <string name="btn_use_biometric">Использовать</string>
     <string name="save_state1">com.dev.planet.biometric.PREFERENCE_FILE_KEY</string>
+    <string name="rebConfig">Сбросить настройки</string>
 </resources>
