--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,13 @@
     <string name="save_state1">com.dev.planet.biometric.PREFERENCE_FILE_KEY</string>
     <string name="rebConfig">Сбросить настройки</string>
     <string name="maps_way">Проложить маршрут</string>
+    // Участки производства
+    <string-array name="nameProduction">
+        <item>Обработка</item>
+        <item>Покраска</item>
+        <item>Сборка</item>
+        <item>Сварочный</item>
+        <item>Термообработка</item>
+    </string-array>
+
 </resources>
